<resources>
    <string name="app_name">AnimalTrakkerFarmMobile</string>
    <string name="app_name_long" translatable="false">Weyr Associates AnimalTrakker Farm Mobile</string>
    <string name="app_name_settings" translatable="false">Weyr Associates AnimalTrakker Farm Mobile - Settings</string>
    <string name="app_name_about" translatable="false">Weyr Associates AnimalTrakker Farm Mobile - About</string>
    <string name="app_url" translatable="false">Support@AnimalTrakker.com"</string>
    <string name="database_path" translatable="false">/data/data/com.weyr_associates.animaltrakkerfarmmobile/databases/</string>
    <string name="service_started" translatable="false">EID Service Running</string>
    <string name="service_label" translatable="false">EID Service</string>
    <string name="baa_service_started" translatable="false">Baacode Service Running</string>
    <string name="baa_service_label" translatable="false">Baacode Service</string>
    <string name="scale_service_started" translatable="false">SCALE Service Running</string>
    <string name="scale_service_label" translatable="false">SCALE Service</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="menu_about" translatable="false">About</string>
    <string name="copy_db_assets_btn" translatable="false">Load Blank Database</string>
    <string name="select_animal_database_btn" translatable="false">Select Animal Database</string>
    <string name="show_animal_database_btn" translatable="false">Show Animal Database</string>
    <string name="backup_animal_database_btn" translatable="false">Backup Animal Database</string>
    <string name="dialog_title_install_database" translatable="false">Please Install Database</string>
    <string name="dialog_message_install_database" translatable="false">Please Install Database from Data Management Screen.\n\nWould you like to do so now?</string>
    <string name="dialog_title_invalid_database" translatable="false">Invalid Database</string>
    <string name="dialog_message_invalid_database" translatable="false">The installed database has been found to be invalid. %s\n\nWould you like to load another database now?</string>
    <string name="please_use_BT_reader1" translatable="false">This is NOT a Nautiz X6P</string>
    <string name="please_use_BT_reader" translatable="false">Please Pair, select and use a Bluetooth Reader</string>
    <string name="no_database" translatable="false">No Database Found</string>
    <string name="copy_real_db_action" translatable="false">copyRealDB</string>
    <string name="select_file_db_action" translatable="false">selectFileDB</string>
    <string name="copy_blank_db_action" translatable="false">copyBlankDB</string>
    <string name="backup_real_db_action" translatable="false">backupRealDB</string>
    <string name="title_activity_add_owner" translatable="false">Add Ranch Owner</string>
    <string name="title_activity_bull_breeding_soundness" translatable="false">Bull Breeding Soundness</string>
    <string name="title_activity_breeding_soundness" translatable="false">Male Breeding Soundness</string>
    <string name="title_activity_get_data" translatable="false">Database Management</string>
    <string name="title_activity_setup" translatable="false">Setup</string>
    <string name="title_activity_set_defaults" translatable="false">Setup</string>
    <string name="title_activity_tissue_sample" translatable="false">Tissue Sample</string>
    <string name="title_activity_load_animal_list" translatable="false">Load Animal List</string>
    <string name="title_activity_add_animal" translatable="false">Simple Add Animal</string>
    <string name="title_activity_update_tags" translatable="false">Update Tags</string>
    <string name="title_activity_scan_and_print" translatable="false">Scan and Print</string>
    <string name="title_activity_print_label" translatable="false">Print Label</string>
    <string name="title_activity_simple_birth" translatable="false">Simple Births</string>
    <string name="title_activity_counter" translatable="false">Scan, Count and Log</string>
    <string name="title_activity_simple_add_animal" translatable="false">Simple Add Animal</string>
    <string name="title_activity_take_notes">Take Notes</string>
    <string name="title_activity_manage_animal_ids">Manage Animal IDs</string>
    <string name="title_activity_opt_ag_ram_bse">Optimal Livestock Ram BSE</string>
    <string name="title_activity_simple_evaluation">Animal Evaluation</string>
    <string name="title_activity_simple_evaluation_sort_animal">Sort Animals</string>
    <string name="title_activity_simple_evaluation_simple_lambing">Simple Lambing</string>
    <string name="title_activity_simple_evaluation_simple_births">Simple Births</string>
    <string name="title_activity_give_drugs">Give Drugs</string>
    <string name="title_activity_vaccine_deworm">Vaccinate and Deworm</string>
    <string name="title_activity_animal_death">Animal Death</string>
    <string name="title_activity_drug_action_configuration">Configure Drug Action</string>
    <string name="title_activity_drug_action_configuration_format">Configure %s</string>
    <string name="title_activity_drug_action_edit_configuration_format">Edit %s</string>
    <string name="title_activity_opt_livestock_ewe_ultrasound">Optimal Livestock Ewe Ultrasound</string>
    <string name="menu_option_text_scan_print">Scan and Print</string>
    <string name="menu_option_text_manage_animals">Animal/EID Management</string>
    <string name="menu_option_text_animal_evaluation">Animal Evaluation</string>
    <string name="menu_option_text_animal_care">Animal Care/Vet</string>
    <string name="menu_option_text_birthing">Birthing</string>
    <string name="menu_option_text_animal_movements">Animal Movements</string>
    <string name="menu_option_text_animal_history">Animal History</string>
    <string name="menu_option_text_setup">Setup</string>
    <string name="menu_option_text_manage_database">Database Management</string>
    <string name="menu_option_text_quit_app">Quit</string>
    <string name="menu_option_text_scan_count_log">Scan, Count, and Log</string>
    <string name="menu_option_text_simple_add_animal">Simple Add Animal</string>
    <string name="menu_option_text_male_breeding_soundness">Male Breeding Soundness</string>
    <string name="menu_option_text_simple_births">Simple Births</string>
    <string name="menu_option_text_update_animal_id">Update Animal ID</string>
    <string name="menu_option_text_animal_deaths">Animal Deaths</string>
    <string name="menu_option_text_update_animal_details">Update Animal Details</string>
    <string name="menu_option_text_optimal_ag_ram_bse">Optimal Livestock Ram BSE</string>
    <string name="menu_option_text_optimal_ag_ewe_ultrasound">Optimal Livestock Ewe Ultrasound</string>
    <string name="menu_option_text_take_tissue_sample">Take Tissue Samples</string>
    <string name="menu_option_text_evaluate_animal">Evaluate Animal</string>
    <string name="menu_option_text_select_evaluation">Select Saved Evaluation</string>
    <string name="menu_option_text_create_evaluation">Create Evaluation</string>
    <string name="menu_option_text_sick_animals">Give Drugs</string>
    <string name="menu_option_text_vaccinate_deworm">Vaccinate and Deworm</string>
    <string name="menu_option_text_general_animal_care">General Animal Care</string>
    <string name="menu_option_text_group_vaccinate_deworm">Group Vaccinate and Deworm</string>
    <string name="menu_option_text_group_general_animal_care">Group General Animal Care</string>
    <string name="menu_option_text_simple_lambing">Simple Lambing</string>
    <string name="menu_option_text_detailed_lambing">Detailed Lambing</string>
    <string name="menu_option_text_add_female_birthing_history">Add Female Birthing History</string>
    <string name="menu_option_text_simple_sort">Simple Sort</string>
    <string name="menu_option_text_change_premise">Move to New Premise</string>
    <string name="menu_option_text_buy_animals">Buy Animals</string>
    <string name="menu_option_text_sort_ewes_breeding">Sort Ewes for Breeding</string>
    <string name="menu_option_text_sell_animals">Sell Animals</string>
    <string name="menu_option_text_add_contacts">Add Contacts</string>
    <string name="menu_option_text_define_notes">Add Predefined Notes</string>
    <string name="menu_option_text_create_defaults">Create Saved Defaults</string>
    <string name="menu_option_text_add_veterinarian">Add Veterinarian</string>
    <string name="menu_option_text_add_laboratory">Add Laboratory</string>
    <string name="menu_option_text_backup_db_to_storage">Backup Database to Documents</string>
    <string name="menu_option_text_backup_db_to_usb">Backup Database to USB Thumb Drive</string>
    <string name="menu_option_text_select_database">Select New Database</string>
    <string name="menu_option_text_load_seed_database">Load Seed Database</string>
    <string name="text_sex_standard_unknown">Unknown</string>
    <string name="text_sex_standard_male">Male</string>
    <string name="text_sex_standard_female">Female</string>
    <string name="text_sex_standard_castrate">Castrate</string>
    <string name="text_sex_ram">Ram</string>
    <string name="text_sex_ewe">Ewe</string>
    <string name="text_sex_wether">Wether</string>
    <string name="text_sex_unknown">Unknown</string>
    <string name="text_sex_buck">Buck</string>
    <string name="text_sex_doe">Doe</string>
    <string name="text_sex_bull">Bull</string>
    <string name="text_sex_cow">Cow</string>
    <string name="text_sex_steer">Steer</string>
    <string name="text_sex_stallion">Stallion</string>
    <string name="btn_set_defaults" translatable="false">Select Saved Defaults</string>
    <string name="tag_number_lbl" translatable="false">Tag Number</string>
    <string name="tag_type_abbrev_lbl" translatable="false">Type</string>
    <string name="tag_color_abbrev_lbl" translatable="false">Color</string>
    <string name="tag_location_name_lbl" translatable="false">Location</string>
    <string name="animal_trakker">AnimalTrakker</string>
    <string name="required_permissions">Required Permissions</string>
    <string name="text_none">None</string>
    <string name="text_all">All</string>
    <string name="text_front_left">Front Left</string>
    <string name="text_front_right">Front Right</string>
    <string name="text_hind_left">Hind Left</string>
    <string name="text_hind_right">Hind Right</string>
    <string name="text_title_general_info">General Info</string>
    <string name="text_title_alerts">Alerts</string>
    <string name="text_title_note_history">Note History</string>
    <string name="text_title_drug_history">Drug History</string>
    <string name="text_title_tissue_sample_history">Tissue Sample History</string>
    <string name="text_title_tissue_test_history">Tissue Test History</string>
    <string name="text_title_evaluation_history">Evaluation History</string>
    <string name="text_title_info">Info</string>
    <string name="text_title_notes">Notes</string>
    <string name="text_title_drugs">Drugs</string>
    <string name="text_title_tissue_samples">Tissue Samples</string>
    <string name="text_title_tissue_tests">Tissue Tests</string>
    <string name="text_title_evaluations">Evaluations</string>
    <string name="text_title_history">History</string>
    <string name="text_title_general">General</string>
    <string name="text_title_genetics">Genetics</string>
    <string name="menu_option_text_manage_drugs">Manage Drugs</string>
    <string name="text_title_movements">Movements</string>
    <string name="text_title_movement_history">Movement History</string>
    <string name="text_title_id_history">ID History</string>
    <string name="text_title_breeding_summary">Breeding Summary</string>
    <string name="text_title_breeding_details">Breeding Details</string>
</resources>