<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_animal_details"
    app:startDestination="@id/nav_dst_animal_info">
    <fragment
        android:id="@+id/nav_dst_animal_info"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsInfoFragment"
        android:label="@string/text_title_general_info"/>
    <fragment
        android:id="@+id/nav_dst_animal_alerts"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsAlertsFragment"
        android:label="@string/text_title_alerts"/>
    <fragment
        android:id="@+id/nav_dst_animal_genetics"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsGeneticsFragment"
        android:label="@string/text_title_genetics"/>
    <fragment
        android:id="@+id/nav_dst_animal_notes"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsNotesFragment"
        android:label="@string/text_title_note_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_drug_history"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsDrugsFragment"
        android:label="@string/text_title_drug_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_tissue_sample_history"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsTissueSamplesFragment"
        android:label="@string/text_title_tissue_sample_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_tissue_test_history"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsTissueTestsFragment"
        android:label="@string/text_title_tissue_test_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_evaluations_history"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsEvaluationsFragment"
        android:label="@string/text_title_evaluation_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_movements_history"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsMovementHistoryFragment"
        android:label="@string/text_title_movement_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_id_history"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsIdHistoryFragment"
        android:label="@string/text_title_id_history"/>
    <fragment
        android:id="@+id/nav_dst_animal_breeding_summary"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsBreedingSummaryFragment"
        android:label="@string/text_title_breeding_summary"/>
    <fragment
        android:id="@+id/nav_dst_animal_breeding_details"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.animal.details.AnimalDetailsBreedingDetailsFragment"
        android:label="@string/text_title_breeding_details"/>
</navigation>
