<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_activity_main"
    app:startDestination="@id/nav_dst_menu_root">
    <fragment
        android:id="@+id/nav_dst_required_permissions"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.RequiredPermissionsFragment"
        android:label="@string/required_permissions"/>
    <fragment
        android:id="@+id/nav_dst_menu_root"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.RootMenuFragment"
        android:label="@string/animal_trakker"/>
    <fragment
        android:id="@+id/nav_dst_menu_manage_animals"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.ManageAnimalsMenuFragment"
        android:label="@string/menu_option_text_manage_animals"/>
    <fragment
        android:id="@+id/nav_dst_menu_animal_evaluation"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.AnimalEvaluationMenuFragment"
        android:label="@string/menu_option_text_animal_evaluation"/>
    <fragment
        android:id="@+id/nav_dst_menu_animal_care"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.AnimalCareMenuFragment"
        android:label="@string/menu_option_text_animal_care"/>
    <fragment
        android:id="@+id/nav_dst_menu_birthing"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.BirthingMenuFragment"
        android:label="@string/menu_option_text_birthing"/>
    <fragment
        android:id="@+id/nav_dst_menu_animal_movements"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.AnimalMovementsMenuFragment"
        android:label="@string/menu_option_text_animal_movements"/>
    <fragment
        android:id="@+id/nav_dst_menu_setup"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.SetupMenuFragment"
        android:label="@string/menu_option_text_setup"/>
    <fragment
        android:id="@+id/nav_dst_menu_setup_drugs"
        android:name="com.weyr_associates.animaltrakkerfarmmobile.app.main.menu.SetupDrugsMenuFragment"
        android:label="@string/menu_option_text_manage_drugs"/>
</navigation>
