<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_menu_screen_margin">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:src="@drawable/animaltrakker" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_scan_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_scan_print" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_manage_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_manage_animals" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_animal_evaluation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_animal_evaluation" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_animal_care"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_animal_care" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_birthing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_birthing" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_animal_movements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_animal_movements" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_animal_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_animal_history" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_setup" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_manage_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_manage_database" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_quit_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_quit_app" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
