<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_menu_screen_margin">
        <TextView
            style="?atrkkrBasicInfoTextStyle"
            android:id="@+id/text_active_defaults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_select_defaults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_defaults"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_manage_drugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_manage_drugs"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_add_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_add_contacts"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_define_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_define_notes"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_create_defaults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_create_defaults"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_add_veterinarian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_add_veterinarian"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_add_laboratory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_add_laboratory"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
