<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_menu_screen_margin">
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_male_breeding_soundness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_male_breeding_soundness"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_optimal_ag_ram_bse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_optimal_ag_ram_bse"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_optimal_ag_ewe_ultrasound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_optimal_ag_ewe_ultrasound"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_take_tissue_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_take_tissue_sample"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_evaluate_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_evaluate_animal"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_create_evaluation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_create_evaluation"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
