<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        style="?atrkkrBasicInfoLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/layout_weight_id_type"
        android:text="@string/tag_type_abbrev_lbl"/>
    <TextView
        style="?atrkkrBasicInfoLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/layout_weight_id_location"
        android:text="@string/tag_location_name_lbl"/>
    <TextView
        style="?atrkkrBasicInfoLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/layout_weight_id_color"
        android:text="@string/tag_color_abbrev_lbl"/>
    <TextView
        style="?atrkkrBasicInfoLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/layout_weight_id_number"
        android:text="@string/tag_number_lbl"/>
</LinearLayout>
