<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <CheckBox
        style="?atrkkrCheckBoxStyle"
        android:id="@+id/check_box_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:text="@string/text_none"/>
    <CheckBox
        style="?atrkkrCheckBoxStyle"
        android:id="@+id/check_box_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginTop="@dimen/interior_spacing_margin_half"
        android:text="@string/text_all"/>
    <CheckBox
        style="?atrkkrCheckBoxStyle"
        android:id="@+id/check_box_front_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_inset_margin"
        android:layout_marginTop="@dimen/interior_spacing_margin_half"
        android:text="@string/text_front_left"/>
    <CheckBox
        style="?atrkkrCheckBoxStyle"
        android:id="@+id/check_box_front_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_inset_margin"
        android:layout_marginTop="@dimen/interior_spacing_margin_half"
        android:text="@string/text_front_right"/>
    <CheckBox
        style="?atrkkrCheckBoxStyle"
        android:id="@+id/check_box_back_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_inset_margin"
        android:layout_marginTop="@dimen/interior_spacing_margin_half"
        android:text="@string/text_hind_left"/>
    <CheckBox
        style="?atrkkrCheckBoxStyle"
        android:id="@+id/check_box_back_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_inset_margin"
        android:layout_marginTop="@dimen/interior_spacing_margin_half"
        android:text="@string/text_hind_right"/>
</LinearLayout>
