<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_menu_screen_margin">
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_simple_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_simple_sort"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_change_premise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_change_premise"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_buy_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_buy_animals"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_sort_ewes_breeding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_sort_ewes_breeding"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_sell_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_sell_animals"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
