<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_menu_screen_margin">
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_scan_count_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_scan_count_log" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_simple_add_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_simple_add_animal" />
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_update_animal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_update_animal_id"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_animal_deaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_animal_deaths"/>
        <Button
            style="?atrkkrMenuCTAButtonStyle"
            android:id="@+id/btn_update_animal_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_text_update_animal_details"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
